--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -31,13 +31,13 @@
 
 <body class="bg-dark">
     <!--<script src="mahjong-points.js"></script>-->
-    <div class="container-fluid p-2">
+    <div class="container p-2">
         <div class="bg-danger rounded p-3 row g-0">
             <h1>Mahjong Punkte Rechner</h1>
         </div>
 
         <div class="bg-light rounded p-3 mt-3 row g-0">
-            <div>Tiles</div>
+            <h2>Tiles</h2>
             <div class="rounded border p-1 mr-tiles" id="mr_tiles">
                 <div>
                     <img src="images/bamboo1.svg" title="bamboo 1"/>
@@ -50,6 +50,13 @@
                     <img src="images/bamboo8.svg" title="bamboo 8"/>
                     <img src="images/bamboo9.svg" title="bamboo 9"/>
                 </div>
+            </div>
+        </div>
+
+        <div class="bg-light rounded p-3 mt-3 row g-0">
+            <h2>Hand</h2>
+            <div>
+
             </div>
         </div>
     </div>
