Some basic interaction

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -55,7 +55,7 @@
 
         <div class="bg-light rounded p-3 mt-3 row g-0">
             <h2>Hand</h2>
-            <div>
+            <div id="mr_selected_tiles">
 
             </div>
         </div>
