--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -37,25 +37,17 @@
         </div>
 
         <div class="bg-light rounded p-3 mt-3 row g-0">
-            <h2>Tiles</h2>
+            <div class="d-flex justify-content-between">
+                <h2>Tiles</h2>
+                <button class="btn btn-secondary" id="mr_btn_calc"><i class="bi bi-calculator-fill"></i></button>
+            </div>
             <div class="rounded border p-1 mr-tiles" id="mr_tiles">
-                <div>
-                    <img src="images/bamboo1.svg" title="bamboo 1"/>
-                    <img src="images/bamboo2.svg" title="bamboo 2"/>
-                    <img src="images/bamboo3.svg" title="bamboo 3"/>
-                    <img src="images/bamboo4.svg" title="bamboo 4"/>
-                    <img src="images/bamboo5.svg" title="bamboo 5"/>
-                    <img src="images/bamboo6.svg" title="bamboo 6"/>
-                    <img src="images/bamboo7.svg" title="bamboo 7"/>
-                    <img src="images/bamboo8.svg" title="bamboo 8"/>
-                    <img src="images/bamboo9.svg" title="bamboo 9"/>
-                </div>
             </div>
         </div>
 
         <div class="bg-light rounded p-3 mt-3 row g-0">
             <h2>Hand</h2>
-            <div id="mr_selected_tiles">
+            <div id="mr_selected_tiles" class="mr-tile-field">
 
             </div>
         </div>
