--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -31,7 +31,7 @@
 
 <body class="bg-dark">
     <!--<script src="mahjong-points.js"></script>-->
-    <div class="container p-2">
+    <div class="container-fluid p-2">
         <div class="bg-danger rounded p-3 row g-0">
             <h1>Mahjong Punkte Rechner</h1>
         </div>
