deploy: c0179230cdb9d99583dda14556cb5c70486dedff

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <body class="bg-dark">
     <!--<script src="mahjong-points.js"></script>-->
-    <div class="container p-2">
-        <div class="bg-danger rounded p-3 row g-0">
+    <div class="container-fluid p-2">
+        <div class="bg-danger rounded mt-2 p-3 row g-0">
             <h1>Mahjong Punkte Rechner</h1>
         </div>
 
@@ -51,6 +51,41 @@
 
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="page-footer font-small row bg-dark text-muted border border-secondary mt-4 p-4 g-0 rounded">
+            <h5 class="text-uppercase text-md-start text-center">Mahjong Points Calculator</h5>
+            <div class="text-center text-md-start collapse show" id="footerContent">
+                <div class="row">
+                    <div class="col-md-6 mt-md-0 mt-3">
+                        <p>More text to come here.</p>
+                        <p>Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
+                                                          target="_blank" rel="noopener">Github</a>.
+                        </p>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
+                    <div class="col-md-3 mb-md-0 mb-3">
+                        <h5>Useful Mahjong Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a class="rounded" href="https://google.com/" target="_blank" rel="noopener"
+                                   id="rg_anchor_regex101">Google</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 mb-md-0 mb-3">
+                        <h5>This project is built using</h5>
+                        <ul class="list-unstyled">
+                            <li><a class="rounded" href="https://kotlinlang.org/" target="_blank" rel="noopener">Kotlin</a></li>
+                            <li><a class="rounded" href="https://getbootstrap.com" target="_blank" rel="noopener">Bootstrap</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="text-center pt-3">
+                <p>© 2023 Copyright <a href="https://github.com/noxone/" target="_blank" rel="noopener">Olaf Neumann</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 
