--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -36,17 +36,31 @@
         </div>
 
         <div class="row g-0">
-            <div class="col-md-8 col-lg-6 pe-md-3 mt-3 ">
-                <div class="bg-light rounded p-3 row g-0">
-                    <h2>Tiles</h2>
-                    <div class="mr-tiles" id="mr_tiles">
+            <div class="col-md-8 col-lg-9 pe-md-3 mt-3 row g-0">
+                <div class="col-12 col-lg-8">
+                    <div class=" bg-light rounded p-3 row g-0">
+                        <h2>Tiles</h2>
+                        <div class="mr-tiles" id="mr_tiles">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 ">
+                    <div class="bg-light rounded p-3 row g-0 mt-3 mt-lg-0 ms-lg-3">
+                        <h2>Options</h2>
+                        <form id="mr_options">
+                            <div class="">
+                                Rundenwind
+                            </div>
+                            <div class="">
+                                Platzwind
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
     
-            <div class="col-md-4 col-lg-6 bg-light rounded p-3 mt-3 row g-0">
+            <div class="col-md-4 col-lg-3 bg-light rounded p-3 mt-3">
                 <h2>Hand</h2>
-                <div class="mr-tile-container">text</div>
                 <div id="mr_selected_tiles" class="mr-tile-container">
                 </div>
             </div>
