--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -61,7 +61,7 @@
     
             <div class="col-md-4 col-lg-3 bg-light rounded p-3 mt-3">
                 <h2>Hand</h2>
-                <div id="mr_selected_tiles" class="mr-tile-container">
+                <div id="mr_selected_tiles" class="mr-figure-holder">
                 </div>
             </div>
         </div>
