--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -65,6 +65,14 @@
                 </div>
             </div>
         </div>
+    
+        <div class="row g-0">
+            <div class="col bg-light rounded p-3 mt-3">
+                <h2>Result</h2>
+                <div id="mr_result">
+                </div>
+            </div>
+        </div>
 
         <!-- Footer -->
         <footer class="page-footer font-small row bg-dark text-muted border border-secondary mt-4 p-4 g-0 rounded">
