Quite good result dialog

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
     
-        <div class="row g-0">
+        <div class="row g-0 d-none">
             <div class="col bg-light rounded p-3 mt-3">
                 <h2>Result</h2>
                 <div id="mr_result">
