--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -29,7 +29,7 @@
     <title>Mahjong Point Calculator</title>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark user-select-none">
     <div class="container-fluid p-2">
         <div class="bg-danger rounded mt-2 p-3 row g-0">
             <h1>Mahjong Punkte Rechner</h1>
