--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -30,45 +30,47 @@
 </head>
 
 <body class="bg-dark user-select-none">
-    <div class="container-fluid p-2">
-        <div class="bg-danger rounded mt-2 p-3 row g-0">
-            <h1>Mahjong Punkte Rechner</h1>
-        </div>
+    <div class="container-fluid">
+        <div class="row g-0 mt-3">
+            <div class="col-lg-9 pe-lg-2 mb-2 order-first">
+                <div class="bg-danger rounded p-4 d-flex align-items-center" style="height: 100%;">
+                    <h1 class="fw-bold">Mahjong Punkte Rechner</h1>
+                </div>
+            </div>
 
-        <div class="row g-0">
-            <div class="col-md-8 col-lg-9 pe-md-3 mt-3 row g-0">
-                <div class="col-12 col-lg-8">
-                    <div class=" bg-light rounded p-3 row g-0">
-                        <h2>Tiles</h2>
-                        <div class="mr-tiles" id="mr_tiles">
-                        </div>
-                    </div>
+            <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
+                <div class="bg-secondary border border-secondary rounded text-light p-3" style="height: 100%;">
+                    <h2>Compute</h2>
+                    <div id="mr_result"></div>
                 </div>
-                <div class="col-12 col-lg-4 ">
-                    <div class="bg-light rounded p-3 row g-0 mt-3 mt-lg-0 ms-lg-3">
-                        <h2>Options</h2>
-                        <form id="mr_options">
-                        </form>
+            </div>
+
+            <div class="col-md-8 col-lg-6 pe-2 mb-2">
+                <div class=" bg-light rounded p-3" style="height: 100%;">
+                    <h2>Tiles</h2>
+                    <div class="mr-tiles" id="mr_tiles">
                     </div>
                 </div>
             </div>
-    
-            <div class="col-md-4 col-lg-3 bg-light rounded p-3 mt-3">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h2>Hand</h2>
-                    <button class="btn btn-sm btn-outline-secondary d-none" id="mr_btn_undo" type="button">
-                        <i class="bi bi-arrow-counterclockwise"></i>
-                    </button>
-                </div>
-                <div id="mr_selected_tiles" class="mr-figure-holder">
+
+            <div class="col-md-4 col-lg-3 pe-lg-2 mb-2">
+                <div class="bg-light rounded p-3" style="height: 100%;">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h2>Hand</h2>
+                        <button class="btn btn-sm btn-outline-secondary d-none" id="mr_btn_undo" type="button" title="Undo">
+                            <i class="bi bi-arrow-counterclockwise"></i>
+                        </button>
+                    </div>
+                    <div id="mr_selected_tiles" class="mr-figure-holder">
+                    </div>
                 </div>
             </div>
-        </div>
-    
-        <div class="row g-0 d-none">
-            <div class="col bg-light rounded p-3 mt-3">
-                <h2>Result</h2>
-                <div id="mr_result">
+
+            <div class="col-md-9 col-lg-3 pe-md-2 pe-lg-0 mb-2">
+                <div class="bg-light rounded p-3" style="height: 100%;">
+                    <h2>Options</h2>
+                    <form id="mr_options">
+                    </form>
                 </div>
             </div>
         </div>
