--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -33,8 +33,8 @@
 </head>
 
 <body class="bg-dark user-select-none">
-    <div class="container-fluid">
-        <div class="row g-0 mt-3">
+    <div class="container-fluid my-3">
+        <div class="row g-0">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
                 <div class="bg-danger rounded p-4 d-flex align-items-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Punkte Rechner</h1>
@@ -91,7 +91,7 @@
                             or even a whole Mahjong party.</p>
                         <p>Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
                                 target="_blank" rel="noopener">Github</a>.  <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
-                                data-color-scheme="no-preference: dark; light: light; dark: dark;"
+                                data-color-scheme="no-preference: dark; dark: dark; light: dark;"
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
                         <p>
