--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -28,8 +28,17 @@
     <link rel="stylesheet" href="styles/mahjong-points.css">
     <title>Mahjong Point Calculator</title>
 
-    <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+    <!-- REMOVE_LINE_FOR_PUBLISHING
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "ff72tsqse8");
+    </script>
+    REMOVE_LINE_FOR_PUBLISHING -->
 </head>
 
 <body class="bg-dark user-select-none">
@@ -95,7 +104,9 @@
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
                         <p>
-                            <!--<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false" title="Visitor Counter"/>-->
+                            <!-- REMOVE_LINE_FOR_PUBLISHING
+                            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false" title="Visitor Counter"/>
+                            REMOVE_LINE_FOR_PUBLISHING -->
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
