Remove github from development variant

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="styles/mahjong-points.css">
     <title>Mahjong Point Calculator</title>
 
+    <!-- REMOVE_LINE_FOR_PUBLISHING
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
-    <!-- REMOVE_LINE_FOR_PUBLISHING
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -99,10 +99,13 @@
                             players of a whole Mahjong party.
                             or even a whole Mahjong party.</p>
                         <p>Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
-                                target="_blank" rel="noopener">Github</a>.  <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
+                                target="_blank" rel="noopener">Github</a>.  
+                                <!-- REMOVE_LINE_FOR_PUBLISHING
+                                <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
                                 data-color-scheme="no-preference: dark; dark: dark; light: dark;"
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
+                                REMOVE_LINE_FOR_PUBLISHING -->
                         <p>
                             <!-- REMOVE_LINE_FOR_PUBLISHING
                             <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false" title="Visitor Counter"/>
