--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -45,7 +45,7 @@
     <div class="container-fluid my-3">
         <div class="row g-0">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
-                <div class="bg-danger rounded p-4 d-flex align-items-center mr-full-height">
+                <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Punkte Rechner</h1>
                 </div>
             </div>
