First step for translations #9

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -94,7 +94,7 @@
             <div class="text-center text-md-start collapse show" id="footerContent">
                 <div class="row">
                     <div class="col-md-6 mt-md-0 mt-3">
-                        <p><code>Mahjong Point Calculator</code> is a ``Mahjong Point Calculator`` is a tool to compute
+                        <p><code>Mahjong Point Calculator</code> is a tool to compute
                             the points of a Mahjong game. In a second mode it will be able to track the points of all
                             players of a whole Mahjong party.
                             or even a whole Mahjong party.</p>
