--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -43,7 +43,7 @@
 
 <body class="bg-dark user-select-none">
     <div class="container-fluid my-3">
-        <div class="row g-0">
+        <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
                 <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Punkte Rechner</h1>
