--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -46,7 +46,7 @@
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
                 <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
-                    <h1 class="fw-bold">Mahjong Punkte Rechner</h1>
+                    <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
 
@@ -95,9 +95,7 @@
                 <div class="row">
                     <div class="col-md-6 mt-md-0 mt-3">
                         <p><code>Mahjong Point Calculator</code> is a tool to compute
-                            the points of a Mahjong game. In a second mode it will be able to track the points of all
-                            players of a whole Mahjong party.
-                            or even a whole Mahjong party.</p>
+                            the points of a Mahjong game.</p>
                         <p>Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
                                 target="_blank" rel="noopener">Github</a>.  
                                 <!-- REMOVE_LINE_FOR_PUBLISHING
