--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body class="bg-dark user-select-none">
-    <div class="container-fluid my-3">
+    <div class="container-xxl my-3">
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
                 <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
@@ -52,7 +52,7 @@
 
             <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
                 <div class="bg-secondary border border-secondary rounded text-light p-3" style="height: 100%;">
-                    <h2>Compute</h2>
+                    <h2>Result</h2>
                     <div id="mr_result"></div>
                 </div>
             </div>
