--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -26,6 +26,7 @@
 
     <!-- now for our page -->
     <link rel="stylesheet" href="styles/mahjong-points.css">
+    <link rel="stylesheet" href="styles/tiles.css">
     <title>Mahjong Point Calculator</title>
 
     <!-- REMOVE_LINE_FOR_PUBLISHING
@@ -49,7 +50,6 @@
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
-
             <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
                 <div class="bg-secondary border border-secondary rounded text-light p-3" style="height: 100%;">
                     <h2>Result</h2>
