Improve positioning of tiles #14

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -58,9 +58,9 @@
             </div>
 
             <div class="col-md-8 col-lg-6 pe-2 mb-2">
-                <div class=" bg-light rounded p-3" style="height: 100%;">
+                <div class=" bg-light rounded p-3 d-flex flex-column justify-content-between" style="height: 100%;">
                     <h2>Tiles</h2>
-                    <div class="mr-tiles" id="mr_tiles">
+                    <div class="mr-tile-field mr-tile-container d-flex align-self-streched flex-fill" id="mr_tiles">
                     </div>
                 </div>
             </div>
