--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -22,11 +22,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=GIT_COMMIT_ID"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css">
-    <link rel="stylesheet" href="styles/tiles.css">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=GIT_COMMIT_ID">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=GIT_COMMIT_ID">
     <title>Mahjong Point Calculator</title>
 
     <!-- REMOVE_LINE_FOR_PUBLISHING
@@ -94,21 +94,29 @@
             <div class="text-center text-md-start collapse show" id="footerContent">
                 <div class="row">
                     <div class="col-md-6 mt-md-0 mt-3">
-                        <p><code>Mahjong Point Calculator</code> is a tool to compute
-                            the points of a Mahjong game.</p>
-                        <p>Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
-                                target="_blank" rel="noopener">Github</a>.  
-                                <!-- REMOVE_LINE_FOR_PUBLISHING
-                                <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
+                        <p>
+                            <code>Mahjong Point Calculator</code> is a tool to compute
+                            the points of a Mahjong game.
+                        </p>
+                        <p>
+                            Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
+                                target="_blank" rel="noopener">Github</a>.
+                            <!-- REMOVE_LINE_FOR_PUBLISHING
+                            <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
                                 data-color-scheme="no-preference: dark; dark: dark; light: dark;"
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
-                                REMOVE_LINE_FOR_PUBLISHING -->
-                        <p>
-                            <!-- REMOVE_LINE_FOR_PUBLISHING
-                            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false" title="Visitor Counter"/>
+                            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
+                                title="Visitor Counter" />
                             REMOVE_LINE_FOR_PUBLISHING -->
                         </p>
+                        <!-- REMOVE_LINE_FOR_PUBLISHING
+                        <p>
+                            Build from commit ID <a
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/GIT_COMMIT_ID"
+                                target="_blank" rel="noopener">GIT_COMMIT_ID</a>.
+                        </p>
+                        REMOVE_LINE_FOR_PUBLISHING -->
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
                     <div class="col-md-3 mb-md-0 mb-3">
