Fix commit id script

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -112,7 +112,7 @@
                         </p>
                         <!-- REMOVE_LINE_FOR_PUBLISHING
                         <p>
-                            Build from commit ID <a
+                            Built from commit ID <a
                                 href="https://github.com/noxone/mahjong-point-calculator/tree/GIT_COMMIT_ID"
                                 target="_blank" rel="noopener">GIT_COMMIT_ID</a>.
                         </p>
