deploy: 53b9c837b3a25d271378cc927ae3021ddc57679c

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=$(git rev-parse HEAD)"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=53b9c837b3a25d271378cc927ae3021ddc57679c"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=$(git rev-parse HEAD)">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=$(git rev-parse HEAD)">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=53b9c837b3a25d271378cc927ae3021ddc57679c">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=53b9c837b3a25d271378cc927ae3021ddc57679c">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -107,9 +107,9 @@
                                 title="Visitor Counter" />
                         </p>
                         <p>
-                            Build from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/$(git rev-parse HEAD)"
-                                target="_blank" rel="noopener">$(git rev-parse HEAD)</a>.
+                            Built from commit ID <a
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/53b9c837b3a25d271378cc927ae3021ddc57679c"
+                                target="_blank" rel="noopener">53b9c837b3a25d271378cc927ae3021ddc57679c</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
