--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -114,7 +114,7 @@
                         <p>
                             Built from commit ID <a
                                 href="https://github.com/noxone/mahjong-point-calculator/tree/GIT_COMMIT_ID"
-                                target="_blank" rel="noopener">GIT_COMMIT_ID</a>.
+                                target="_blank" rel="noopener">SHORT_COMMIT_ID</a>.
                         </p>
                         REMOVE_LINE_FOR_PUBLISHING -->
                     </div>
