--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -50,23 +50,21 @@
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
+
             <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
-                <div class="bg-secondary border border-secondary rounded text-light p-3" style="height: 100%;">
+                <div id="mr_result" class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
                     <h2>Result</h2>
-                    <div id="mr_result"></div>
                 </div>
             </div>
 
             <div class="col-md-8 col-lg-6 pe-2 mb-2">
-                <div class=" bg-light rounded p-3 d-flex flex-column justify-content-between" style="height: 100%;">
+                <div id="mr_tiles" class=" bg-light rounded d-flex flex-column p-3 mr-full-height">
                     <h2>Tiles</h2>
-                    <div class="mr-tile-field mr-tile-container d-flex align-self-streched flex-fill" id="mr_tiles">
-                    </div>
                 </div>
             </div>
 
             <div class="col-md-4 col-lg-3 pe-lg-2 mb-2">
-                <div class="bg-light rounded p-3" style="height: 100%;">
+                <div id="mr_selected_tiles" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2>Hand</h2>
                         <button class="btn btn-sm btn-outline-secondary d-none" id="mr_btn_undo" type="button"
@@ -74,16 +72,12 @@
                             <i class="bi bi-arrow-counterclockwise"></i>
                         </button>
                     </div>
-                    <div id="mr_selected_tiles" class="mr-figure-holder">
-                    </div>
                 </div>
             </div>
 
             <div class="col-md-9 col-lg-3 pe-md-2 pe-lg-0 mb-2">
-                <div class="bg-light rounded p-3" style="height: 100%;">
+                <div id="mr_options" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                     <h2>Options</h2>
-                    <form id="mr_options">
-                    </form>
                 </div>
             </div>
         </div>
