Add font for title

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -27,6 +27,7 @@
     <!-- now for our page -->
     <link rel="stylesheet" href="styles/mahjong-points.css?commitId=GIT_COMMIT_ID">
     <link rel="stylesheet" href="styles/tiles.css?commitId=GIT_COMMIT_ID">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=GIT_COMMIT_ID">
     <title>Mahjong Point Calculator</title>
 
     <!-- REMOVE_LINE_FOR_PUBLISHING
