--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -47,13 +47,15 @@
     <div class="container-xxl my-3">
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
-                <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
+                <div
+                    class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
 
             <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
-                <div id="mr_result" class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
+                <div id="mr_result"
+                    class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
                     <h2>Result</h2>
                 </div>
             </div>
@@ -101,8 +103,6 @@
                                 data-color-scheme="no-preference: dark; dark: dark; light: dark;"
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
-                            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
-                                title="Visitor Counter" />
                             REMOVE_LINE_FOR_PUBLISHING -->
                         </p>
                         <!-- REMOVE_LINE_FOR_PUBLISHING
@@ -143,8 +143,16 @@
 
             <!-- Copyright -->
             <div class="text-center pt-3">
-                <p>© 2023 Copyright <a href="https://github.com/noxone/" target="_blank" rel="noopener">Olaf Neumann</a>
+                <p>
+                    © 2023 Copyright <a href="https://github.com/noxone/" target="_blank" rel="noopener">Olaf
+                        Neumann</a>
                 </p>
+                    <!-- REMOVE_LINE_FOR_PUBLISHING
+                <p>
+                    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
+                        title="Visitor Counter" />
+                </p>
+                            REMOVE_LINE_FOR_PUBLISHING -->
             </div>
         </footer>
     </div>
