Add warning for small screens

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -45,6 +45,9 @@
 
 <body class="bg-dark user-select-none">
     <div class="container-xxl my-3">
+        <div class="d-md-none bg-light rounded p-3 mb-2">
+            This page is currently only optimized for tablet size screens, like an iPad. Smaller screens will look strange and might not be good to handle.
+        </div>
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
                 <div
