--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=7b21aefe690a8b5af889e85e790f55d400630803"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=645726575993d883076e5971519fba244fb90563"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=7b21aefe690a8b5af889e85e790f55d400630803">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=7b21aefe690a8b5af889e85e790f55d400630803">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=645726575993d883076e5971519fba244fb90563">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=645726575993d883076e5971519fba244fb90563">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=645726575993d883076e5971519fba244fb90563">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -42,15 +43,20 @@
 
 <body class="bg-dark user-select-none">
     <div class="container-xxl my-3">
+        <div class="d-md-none bg-light rounded p-3 mb-2">
+            This page is currently only optimized for tablet size screens, like an iPad. Smaller screens will look strange and might not be good to handle.
+        </div>
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
-                <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
+                <div
+                    class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
 
             <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
-                <div id="mr_result" class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
+                <div id="mr_result"
+                    class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
                     <h2>Result</h2>
                 </div>
             </div>
@@ -97,13 +103,11 @@
                                 data-color-scheme="no-preference: dark; dark: dark; light: dark;"
                                 data-icon="octicon-star" data-show-count="true"
                                 aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
-                            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
-                                title="Visitor Counter" />
                         </p>
                         <p>
                             Built from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/7b21aefe690a8b5af889e85e790f55d400630803"
-                                target="_blank" rel="noopener">7b21aef</a>.
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/645726575993d883076e5971519fba244fb90563"
+                                target="_blank" rel="noopener">6457265</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
@@ -136,7 +140,13 @@
 
             <!-- Copyright -->
             <div class="text-center pt-3">
-                <p>© 2023 Copyright <a href="https://github.com/noxone/" target="_blank" rel="noopener">Olaf Neumann</a>
+                <p>
+                    © 2023 Copyright <a href="https://github.com/noxone/" target="_blank" rel="noopener">Olaf
+                        Neumann</a>
+                </p>
+                <p>
+                    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
+                        title="Visitor Counter" />
                 </p>
             </div>
         </footer>
