--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
+            <div class="col-md-3 col-lg-3 mb-2 order-last order-lg-first">
                 <div id="mr_result"
                     class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
                     <h2>Result</h2>
