deploy: 076e783d11e049623e8da977e65d9b636aed51d9

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=645726575993d883076e5971519fba244fb90563"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=076e783d11e049623e8da977e65d9b636aed51d9"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=645726575993d883076e5971519fba244fb90563">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=645726575993d883076e5971519fba244fb90563">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=645726575993d883076e5971519fba244fb90563">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-lg-3 mb-2 order-md-last order-lg-first">
+            <div class="col-md-3 col-lg-3 mb-2 order-last order-lg-first">
                 <div id="mr_result"
                     class="bg-secondary border border-secondary rounded text-light d-flex flex-column mr-full-height p-3">
                     <h2>Result</h2>
@@ -106,8 +106,8 @@
                         </p>
                         <p>
                             Built from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/645726575993d883076e5971519fba244fb90563"
-                                target="_blank" rel="noopener">6457265</a>.
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/076e783d11e049623e8da977e65d9b636aed51d9"
+                                target="_blank" rel="noopener">076e783</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
