--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,9 +12,9 @@
     <meta name="author" content="Olaf Neumann" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon_32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/icon_16.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
