--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="author" content="Olaf Neumann" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon_32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/icon_16.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,12 +22,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=076e783d11e049623e8da977e65d9b636aed51d9"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=076e783d11e049623e8da977e65d9b636aed51d9">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -106,8 +106,8 @@
                         </p>
                         <p>
                             Built from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/076e783d11e049623e8da977e65d9b636aed51d9"
-                                target="_blank" rel="noopener">076e783</a>.
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/b4e3f66b1045f3347d314c2c8452659004f16b3b"
+                                target="_blank" rel="noopener">b4e3f66</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
