Add indicator for screen size

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -50,9 +50,21 @@
         </div>
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
-                <div
-                    class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
+                <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
+                    <!--REMOVE_LINE_FOR_PUBLISHING
+                    <div class="d-none">
+                    REMOVE_LINE_FOR_PUBLISHING -->
+                        <div class="ms-3">
+                            <span class="d-md-none">sm</span>
+                            <span class="d-none d-md-block d-lg-none">md</span>
+                            <span class="d-none d-lg-block d-xl-none">lg</span>
+                            <span class="d-none d-xl-block d-xxl-none">xl</span>
+                            <span class="d-none d-xxl-block">xxl</span>
+                        </div>
+                    <!--REMOVE_LINE_FOR_PUBLISHING
+                    </div>
+                    REMOVE_LINE_FOR_PUBLISHING -->
                 </div>
             </div>
 
