deploy: 59456f206dfe23b423b21ad7cfa042eb954a1102

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=b4e3f66b1045f3347d314c2c8452659004f16b3b">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -48,9 +48,17 @@
         </div>
         <div class="row g-0" id="mr_main">
             <div class="col-lg-9 pe-lg-2 mb-2 order-first">
-                <div
-                    class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
+                <div class="bg-danger text-light rounded p-4 d-flex align-items-center justify-content-center mr-full-height">
                     <h1 class="fw-bold">Mahjong Points Calculator</h1>
+                    <div class="d-none">
+                        <div class="ms-3">
+                            <span class="d-md-none">sm</span>
+                            <span class="d-none d-md-block d-lg-none">md</span>
+                            <span class="d-none d-lg-block d-xl-none">lg</span>
+                            <span class="d-none d-xl-block d-xxl-none">xl</span>
+                            <span class="d-none d-xxl-block">xxl</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -106,8 +114,8 @@
                         </p>
                         <p>
                             Built from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/b4e3f66b1045f3347d314c2c8452659004f16b3b"
-                                target="_blank" rel="noopener">b4e3f66</a>.
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/59456f206dfe23b423b21ad7cfa042eb954a1102"
+                                target="_blank" rel="noopener">59456f2</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
