enable splash screen #28

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -16,7 +16,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/icon_32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/icon_16.png">
 
-    <!-- iOS icons -->
+    <!-- touch stuff -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="icons/icon_80.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icons/icon_152.png"><!--ipad-->
     <link rel="apple-touch-icon" sizes="167x167" href="icons/icon_167.png"><!--iphone-retina-->
