--- a/index.html
+++ b/index.html
@@ -16,18 +16,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/icon_32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/icon_16.png">
 
+    <!-- touch stuff -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="icons/icon_80.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/icon_152.png"><!--ipad-->
+    <link rel="apple-touch-icon" sizes="167x167" href="icons/icon_167.png"><!--iphone-retina-->
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/icon_180.png"><!--ipad-retina-->
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=e319c01692719afb023f5b2a5dcb6810861f1b71"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=59456f206dfe23b423b21ad7cfa042eb954a1102">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=e319c01692719afb023f5b2a5dcb6810861f1b71">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=e319c01692719afb023f5b2a5dcb6810861f1b71">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=e319c01692719afb023f5b2a5dcb6810861f1b71">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -114,8 +122,8 @@
                         </p>
                         <p>
                             Built from commit ID <a
-                                href="https://github.com/noxone/mahjong-point-calculator/tree/59456f206dfe23b423b21ad7cfa042eb954a1102"
-                                target="_blank" rel="noopener">59456f2</a>.
+                                href="https://github.com/noxone/mahjong-point-calculator/tree/e319c01692719afb023f5b2a5dcb6810861f1b71"
+                                target="_blank" rel="noopener">e319c01</a>.
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
