Improve tile animations

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -18,6 +18,7 @@
 
     <!-- touch stuff -->
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="icons/icon_80.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icons/icon_152.png"><!--ipad-->
