Add error messages

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-lg-6 pe-2 mb-2">
+            <div class="col-md-8 col-lg-6 pe-2 mb-2 position-relative">
                 <div id="mr_tiles" class=" bg-light rounded d-flex flex-column p-3 mr-full-height">
                     <h2>Tiles</h2>
                 </div>
