Add loading indicator

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -53,6 +53,16 @@
 </head>
 
 <body class="bg-dark user-select-none">
+    <div id="mr_loading" class="fixed-top fixed-bottom bg-dark d-flex flex-column align-items-center justify-content-center">
+        <img src="images/mahjong-points-dark.svg" alt="Logo"/>
+        <div class="text-light fw-bold p-3 display-4">
+            Mahjong Points Calculator
+        </div>
+        <div class="text-light p-3 display-6">
+            loading...
+        </div>
+    </div>
+
     <div class="container-xxl my-3">
         <div class="d-md-none bg-light rounded p-3 mb-2">
             This page is currently only optimized for tablet size screens, like an iPad. Smaller screens will look strange and might not be good to handle.
